[gd_scene load_steps=3 format=2]

[ext_resource path="res://textures/playerSheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Actors/player_ghost.gd" type="Script" id=2]

[node name="player_ghost" type="Node2D"]
script = ExtResource( 2 )

[node name="ghost_sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
hframes = 5

[node name="alpha_Tween" type="Tween" parent="ghost_sprite"]

[connection signal="tween_completed" from="ghost_sprite/alpha_Tween" to="." method="_on_tween_completed"]
